# awareness_steering

./: .gitignore  extract_vectors.py  pyproject.toml  run.py  worker.py
configs/: default.yaml  test.yaml
data/: contrastive_prompts.json  fortress
scripts/: analyze.py  layer_sweep.py  plot_steering.py
