[project]
name = "eval-steering"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "transformers",
    "accelerate",
    "openai",
    "pyyaml",
    "python-dotenv",
    "tqdm",
    "flash-attn",
    "matplotlib>=3.10.8",
]

[tool.uv.extra-build-dependencies]
flash-attn = ["torch"]
